<resources>
    <string name="app_name">试穿平台</string>
    <string name="good">商品名称:</string>
    <string name="goodID">商品序号:</string>
    <string name="set_001">个人信息</string>
    <string name="set_002">试穿历史</string>
    <string name="set_003">个人收藏</string>
    <string name="set_004">升级店铺</string>
    <string name="set_005">关于我们</string>
    <string name="set_006">发布商品</string>
    <string name="shops">商家</string>
    <string name="message">社区</string>
    <string name="self">个人中心</string>
    <string name="bar_home">主页</string>
    <string name="bar_shop">店铺</string>
    <string name="bar_distribute">社区</string>
    <string name="bar_self">个人</string>
    <string name="sell_prize">售卖价格</string>
    <string name="good_comment">评论详情</string>
    <string name="try_on_now">立即试穿</string>
    <string name="shop">店铺</string>
    <string name="collect">收集</string>
    <string name="good_name">商店名字</string>
    <string name="shop_name">店铺名</string>
    <string name="click_log_out">退出登录</string>
    <string name="register">注册</string>
    <string name="logIn">登录</string>
    <string name="selfInfoChange">个人信息修改</string>
    <string name="clickToChange">点击修改</string>
    <string name="clickToUpgrade">点击升级</string>
    <string name="commentDetail">社区详情</string>
    <string name="comment">评论</string>
    <string name="shopDetail">店铺详情</string>
    <string name="goodsNum">商品数量</string>
    <string name="clickToAddComm">点击发布</string>
    <string name="disComm">发布帖子</string>
    <string name="commTitle">帖子标题</string>
    <string name="commContext">帖子内容</string>
</resources>