<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgcolor">
    <!--头开始-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/themeColor"
        android:orientation="horizontal">
        <ImageView
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:adjustViewBounds="true" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:text="@string/self"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_margin="2dp"
            android:textColor="@color/white"/>
        <ImageView
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:adjustViewBounds="true"/>
    </LinearLayout>
    <!--头结束-->

    <!--滚动内容开始-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:orientation="horizontal"
                android:background="@color/themeColor">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/userAva"
                    android:layout_marginTop="15dp"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/default_ava"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <LinearLayout
                    style="@style/settingLinearLayout"
                    android:id="@+id/set1">
                    <ImageView
                        style="@style/settingImage"
                        android:src="@drawable/self_info"/>
                    <TextView
                        style="@style/settingText"
                        android:text="@string/set_001"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/settingLinearLayout"
                    android:id="@+id/set2">
                    <ImageView
                        style="@style/settingImage"
                        android:src="@drawable/history"/>
                    <TextView
                        style="@style/settingText"
                        android:text="@string/set_002"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/settingLinearLayout"
                    android:id="@+id/set3">
                    <ImageView
                        style="@style/settingImage"
                        android:src="@drawable/collect"/>
                    <TextView
                        style="@style/settingText"
                        android:text="@string/set_003"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/settingLinearLayout"
                    android:id="@+id/set4">
                    <ImageView
                        style="@style/settingImage"
                        android:src="@drawable/upgrade"/>
                    <TextView
                        style="@style/settingText"
                        android:text="@string/set_004"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/settingLinearLayout"
                    android:id="@+id/set6">
                    <ImageView
                        style="@style/settingImage"
                        android:src="@drawable/add"/>
                    <TextView
                        style="@style/settingText"
                        android:text="@string/set_006"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/settingLinearLayout"
                    android:id="@+id/set5">
                    <ImageView
                        style="@style/settingImage"
                        android:src="@drawable/us"/>
                    <TextView
                        style="@style/settingText"
                        android:text="@string/set_005"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/logOut"
                android:background="@drawable/self_page_button"
                android:text="@string/click_log_out"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="60dp" />
        </LinearLayout>
    </ScrollView>
    <!--滚动内容结束-->

    <!--底开始-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/bottomBar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/selfToHome"
                android:src="@drawable/home_normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/bottomBarButton"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bar_home"
                android:textAlignment="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/selfToShop"
                android:src="@drawable/shop_normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/bottomBarButton"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bar_shop"
                android:textAlignment="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/selfToMessage"
                android:src="@drawable/message_normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/bottomBarButton"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bar_distribute"
                android:textAlignment="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:src="@drawable/self_on_press"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/bottomBarButton"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bar_self"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                />
        </LinearLayout>
    </LinearLayout>
    <!--底结束-->
</LinearLayout>