<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:roundiv="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bgcolor">

    <!--头开始-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/themeColor">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_margin="2dp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <!--内容开始-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">
        <ListView
            android:id="@+id/messageListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/good_bar_layout"
            android:layout_margin="15dp">
        </ListView>
    </LinearLayout>


    <!--底开始-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/bottomBar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/messageToHome"
                android:src="@drawable/home_normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/bottomBarButton"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bar_home"
                android:textAlignment="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/messageToShop"
                android:src="@drawable/shop_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/bottomBarButton"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bar_shop"
                android:textAlignment="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:src="@drawable/message_on_press"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/bottomBarButton"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bar_distribute"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/messageToSelf"
                android:src="@drawable/self_normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/bottomBarButton"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bar_self"
                android:textAlignment="center"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>