<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:roundiv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_back_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:padding="10dp"
            android:src="@drawable/goods_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/shopDetail"
            android:textSize="20dp"
            android:textColor="@color/black"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="#ccc" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white"
        android:layout_margin="10dp">
        <com.Hashqi.try_on_client.Component.SquareImageView
            android:id="@+id/shopava"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:src="@drawable/default_ava"
            android:layout_margin="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/shopName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/good_name"
                android:textColor="@color/black"
                android:textSize="23dp" />
            <TextView
                android:id="@+id/shopNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/goodsNum"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="10dp">

        <!--商品-->
        <com.Hashqi.try_on_client.Component.MyListView
            android:id="@+id/shop_goods_left_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:listSelector="@color/bgcolor">

        </com.Hashqi.try_on_client.Component.MyListView>
        <!--商品-->
        <com.Hashqi.try_on_client.Component.MyListView
            android:id="@+id/shop_goods_right_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:listSelector="@color/bgcolor">

        </com.Hashqi.try_on_client.Component.MyListView>
    </LinearLayout>
</LinearLayout>