<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Page.messageDetailPage.MessageDetailPageActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white">
        <ImageView
            android:id="@+id/iv_back_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:padding="10dp"
            android:src="@drawable/goods_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/commentDetail"
            android:textSize="20dp"
            android:textColor="@color/black"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="#ccc" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="horizontal">
                <com.Hashqi.try_on_client.Component.SquareImageView
                    android:id="@+id/userAva"
                    android:layout_margin="15dp"
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:src="@drawable/default_ava"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:gravity="center"
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="undefined"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingTop="15dp"
                android:paddingRight="40dp"
                android:paddingBottom="10dp"
                android:text="undefined"
                android:textColor="@color/black"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/clickToShop"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@color/white">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="点击进入相关商品"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="19dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:orientation="vertical"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_comment"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                android:paddingLeft="20dp"/>
            <com.Hashqi.try_on_client.Component.MyListView
                android:id="@+id/cComment"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.Hashqi.try_on_client.Component.MyListView>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingBottom="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/white"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/commEdit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"/>
        <Button
            android:id="@+id/clickToSubmit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/comment"
            android:textColor="@color/white"
            android:textSize="20dp"/>
    </LinearLayout>
</LinearLayout>